--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "next": "^13.3.1",
     "next-themes": "^0.2.1",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.43.9"
+    "react-hook-form": "^7.43.9",
+    "react-lottie": "^1.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
